Add many sandboxing directives to systemd service

--- a/make-first-firefox-profile-default.service
+++ b/make-first-firefox-profile-default.service
@@ -4,3 +4,32 @@ Description=Make the first Firefox profile the default one
 [Service]
 Type=oneshot
 ExecStart=%h/.local/lib/make-first-firefox-profile-default
+
+CapabilityBoundingSet=
+IPAddressDeny=any
+KeyringMode=private
+LockPersonality=yes
+MemoryDenyWriteExecute=yes
+NoNewPrivileges=yes
+PrivateDevices=yes
+PrivateIPC=yes
+PrivateMounts=yes
+PrivateNetwork=yes
+PrivateTmp=yes
+PrivateUsers=true
+ProtectClock=yes
+ProtectControlGroups=yes
+ProtectHostname=yes
+ProtectKernelLogs=yes
+ProtectKernelModules=yes
+ProtectKernelTunables=yes
+ProtectSystem=strict
+ReadOnlyPaths=/
+ReadWritePaths=%h/.mozilla/firefox/
+RestrictAddressFamilies=none
+RestrictNamespaces=yes
+RestrictRealtime=yes
+RestrictSUIDSGID=yes
+SystemCallArchitectures=native
+SystemCallFilter=@system-service
+SystemCallFilter=~@privileged @resources
