Also remove connection to systemd in sandbox
The sandbox is pretty pointless if the service can still talk to
/run/user/*/systemd/private or similar sockets.

--- a/make-first-firefox-profile-default.service
+++ b/make-first-firefox-profile-default.service
@@ -33,3 +33,4 @@ RestrictSUIDSGID=yes
 SystemCallArchitectures=native
 SystemCallFilter=@system-service
 SystemCallFilter=~@privileged @resources
+TemporaryFileSystem=/run
